--- a/style.css
+++ b/style.css
@@ -1,29 +1,25 @@
-*{
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-  }
+
 
 /* Burger menu start */
 
   .navhead {
       background-color: #414141;
   }
-  
+
   .norqilogo1 {
     z-index: 1;
     padding-left: 3%;
     padding-top: 1.5%;
     width: 25%;
   }
-  
+
   .burgerbox {
-    z-index: 1;
+    z-index: 5;
     width: 100%;
     background-color: #414141;
     background-size: cover;
   }
-  
+
   .navbar {
     width: 270px;
     height: 100%;
@@ -36,11 +32,11 @@
     align-items: center;
     transition: right .8s cubic-bezier(1, 0, 0, 1);
   }
-  
+
   .change{
     right: 0;
   }
-  
+
   .burgermenu {
     width: 35px;
     height: 30px;
@@ -52,35 +48,35 @@
     flex-direction: column;
     justify-content: space-around;
   }
-  
+
   .linje {
     width: 100%;
     height: 3px;
     background-color:#50AF31;
     transition: all 0.8s;
   }
-  
+
   .change .linje-1 {
     transform: rotateZ(-405deg) translate(-8px, 6px);
   }
-  
+
   .change .linje-2 {
     opacity: 0;
   }
-  
+
   .change .linje-3 {
     transform: rotateZ(405deg) translate(-8px, -6px);
   }
-  
+
   .nav-list {
     text-align: center;
   }
-  
+
   .nav-punkt {
     list-style: none;
     margin: 25px;
   }
-  
+
   .nav-link {
     text-decoration: none;
     font-size: 22px;
@@ -91,7 +87,7 @@
     position: relative;
     padding: 3px 0;
   }
-  
+
   .nav-link::before,
   .nav-link::after {
     content: "";
@@ -103,17 +99,17 @@
     transform: scaleX(0);
     transition: transform 0.5s;
   }
-  
+
   .nav-link::after {
     bottom: 0;
     transform-origin: right;
   }
-  
+
   .nav-link::before {
     top: 0;
     transform-origin: left;
   }
-  
+
   .nav-link:hover::before,
   .nav-link:hover::after {
     transform: scaleX(1);
@@ -130,8 +126,8 @@
 
   .header-tekst2 {
     font-family: 'Quicksand', sans-serif;
-    padding: 0px 5% 0px 5%; 
-    color: #50AF31; 
+    padding: 0px 5% 0px 5%;
+    color: #50AF31;
   }
 
   .header-tekst3 {
@@ -141,8 +137,8 @@
 
   .header-tekst4 {
     font-family: 'Quicksand', sans-serif;
-    padding: 0px 5% 0px 5%; 
-    color: #50AF31; 
+    padding: 0px 5% 0px 5%;
+    color: #50AF31;
   }
 
   /* Header slut */
@@ -150,7 +146,7 @@
   /* Visuelle instruktioner start */
 
   .body-vi {
-    background-color: #E2E2E2;  
+    background-color: #E2E2E2;
 
   }
 
@@ -199,7 +195,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
-    grid-template-areas: 
+    grid-template-areas:
     "footer footer";
     background-color: #5cb71d;
   }
